<resources>
    <!-- APP DETAILS -->
    <string name="app_name">Power Protection</string>
    <string name="app_version">1.0</string>

    <!--ERROR MESSAGES-->
    <string name="please_wait">Please wait…</string>
    <string name="coming_soon">Coming soon</string>
    <string name="no_internet">Please connect to internet!</string>
    <string name="field_empty">Field can not be empty</string>
    <string name="invalid">Invalid</string>

    <!--SYMBOLS-->
    <string name="rupee">\u20B9</string>

    <!--TITLE-->
    <string name="title_home">The Shine India</string>
    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="title_duress_config_sett">DURESS CONFIGURATION</string>
    <string name="title_headphone">Headphone</string>
    <string name="title_shake">shake</string>
    <string name="title_toggle">toggle duress</string>
    <string name="title_sos">sos duress</string>
    <string name="title_checkin">check in</string>
    <string name="title_geo_fencing">location</string>
    <string name="title_profile">Profile</string>
    <string name="title_contact">Emergency contacts</string>
    <string name="title_add_contact">Add contact</string>
    <string name="title_biometric">biometric authentication</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_manage">manage provider</string>
    <string name="title_service">service provider</string>
    <string name="title_package">packages</string>
    <string name="title_notification">notifications</string>

    <string name="welcome_text">Welcome Alevant</string>
    <string name="logout">Logout</string>
    <string name="logout_text">Are you sure You want to Logout?</string>
    <string name="already_login_title">Login Alert</string>
    <string name="already_login_msg">You have already logged in from another device. Would you like to logout from other device and login to this new device?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--Broadcast message-->
    <string name="headset_unplugged">Headset is unplugged</string>
    <string name="headset_plugged">Headset is plugged</string>
    <string name="headset_stateless">I have no idea what the headset state is</string>

    <string name="instructions">Place your fingertip on the Fingerprint sensor to verify your identity</string>


    <string name="lock_first_btn" formatted="false">Protection (% s)</string>
     
    <string name="lockscreen_access_pattern_cell_added">Added cell</string>
        
    <string name="lockscreen_access_pattern_start">Draw unlock pattern</string>
        
    <string name="lockscreen_access_pattern_detected">Pattern has been saved </string>
        
    <string name="lockscreen_access_pattern_cleared">Pattern has been deleted </string>
          
    <string name="lock_recording_intro_header">Set the App\'s unlock pattern</string>
        
    <string name="lock_settings_help_how_to_record">How to draw an unlock pattern</string>
        
    <string name="lock_recording_incorrect_too_short">You should connect at least 4 points.</string>
        
    <string name="lock_pattern_entered_header">Record pattern</string>
        
    <string name="lock_need_to_confirm">Draw the pattern again to confirm</string>
        
    <string name="lock_need_to_unlock_wrong">The pattern do not match. Please try again.</string>
        
    <string name="password_gestrue_tips">Draw pattern to unlock</string>
        
    <string name="password_error_count">The pattern does not match. Please try again.</string>
        
    <string name="lock_draw_unlock_pattern">Draw the unlock pattern</string>
        
    <string name="lock_enter_pin_code">Enter a numeric password</string>
        
    <string name="lock_pattern_confirmed_header">Confirmed Pattern</string>
     
        <!--Digital unlock related-->
        
    <string name="num_create_text_01">Enter a 4-digit password to unlock</string>
        
    <string name="num_create_text_02">Enter again to confirm</string>
        
    <string name="num_create_text_03">Password does not match, please try again</string>
        
    <string name="number_1">1</string>
        
    <string name="number_2">2</string>
        
    <string name="number_3">3</string>
        
    <string name="number_4">4</string>
        
    <string name="number_5">5</string>
        
    <string name="number_6">6</string>
        
    <string name="number_7">7</string>
        
    <string name="number_8">8</string>
        
    <string name="number_9">9</string>
        
    <string name="number_0">0 </string>
        
    <string name="password_short">Please enter at least 4 characters. </string>
     
       
    <string-array name="lock_time_array">
                
        <item>15 seconds</item>
                
        <item>30 seconds</item>
                
        <item>1 minute</item>
                
        <item>3 minutes</item>
                
        <item>5 minutes</item>
                
        <item>10 minutes</item>
                
        <item>30 minutes</item>
                
        <item>Immediately </item>
            
    </string-array>
     
        
    <string name="dialog_tip"> Your Android version is greater than or equal Android 5.0, App Lock need to get the \"Application Usage\" permission
    </string>
    <string name="shubham_tyagi">Shubham tyagi</string>
    <string name="github_https_github_com_subhamtyagi">GitHub:https://github.com/subhamtyagi</string>
    <string name="upstream_developer">Upstream Developer</string>
    <string name="up_stream_deve_name_espoir">Espoir</string>
    <string name="github_https_github_com_espoir_x">GitHub:https://github.com/EspoirX/AppLock</string>
    <string name="welcome_to_the_app_lock">Welcome to the App lock</string>
    <string name="reset">Reset</string>
    <string name="create_pattern">Create pattern</string>
    <string name="please_draw_your_pattern">Please draw your pattern</string>
    <string name="identity_confirmation">Identity confirmation</string>
    <string name="search_application">Search Apps</string>
    <string name="settings">Settings</string>
    <string name="lock_settings">Lock Settings</string>
    <string name="lock_immediately_after_locking_the_screen">Lock app immediately locking the phone</string>
    <string name="open">Open</string>
    <string name="change_the_password">Change the pattern</string>
    <string name="show_pattern">Show pattern</string>
    <string name="hide_pattern">Hide pattern</string>
    <string name="about_me">About Me</string>
    <string name="go_to_give_permission">Permit Permission</string>
    <string name="warning">Warning</string>
    <string name="search_applications">Search Apps&#8230;</string>
    <string name="search_for">Search For&#8230;</string>
    <string name="take_a_photo">Intruder selfie</string>
    <string name="_1_minute">1 minute</string>
    <string name="apps">Apps</string>
    <string name="accessibility_service_description">This permission is only used for locking the apps</string>
    <string name="accessibility_service_name">App lock</string>
    <string name="lock_type">Lock Type</string>
    <string name="pattern_is_required">Pattern is required when the Locked Apps are opened</string>
    <string name="pattern_is_not_required">Pattern is not required when the Locked Apps opened</string>
    <string name="intruder_selfie">Intruder Selfie</string>
    <string name="vibrate">Vibration</string>


    <string name="device_admin_explanation">For experimentation purposes only</string>
    <string name="compliant">Your password is compliant!</string>
    <string name="not_compliant">Your password is not compliant! Submit to my authority!</string>
    <string name="password_failed">You will never break into this device!</string>
    <string name="password_success">Congratulations!</string>

    <string name="error_cannot_write">Cannot write image captured by camera.</string>
    <string name="error_cannot_open">Cannot open camera.</string>
    <string name="error_cannot_get_permission">Camera permission not available.</string>
    <string name="error_not_having_camera">Your device does not have front camera.</string>
</resources>
