<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <include
        layout="@layout/layout_toolbar"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:padding="8dp"
            app:srcCompat="@mipmap/backarrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CACACA"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="App locker"
            android:textColor="#2c2c2c"
            android:textSize="14sp"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/checkbox_app_lock_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:button="@drawable/bg_checkbox_lock"
            android:visibility="visible" />

        <Switch
            android:id="@+id/switch_app_locker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="App locker"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE"/>
    </RelativeLayout>
<!--

    <RelativeLayout
        android:id="@+id/lock_type"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/lock_type"
            android:textColor="#2c2c2c"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/lock_type_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableRight="@drawable/arrow_more"
            android:drawablePadding="15dp"
            tool:text="Usage stats"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE"
            android:textColor="#2c2c2c"/>
    </RelativeLayout>

-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Switch
            android:id="@+id/switch_lock_screen_on_phone_lock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/lock_immediately_after_locking_the_screen"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/lock_immediately_after_locking_the_screen"
            android:textColor="#2c2c2c"
            android:textSize="14sp"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/checkbox_lock_screen_switch_on_phone_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:button="@drawable/bg_checkbox_lock"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/intruder_selfie"
            android:textColor="#2c2c2c"
            android:textSize="14sp"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/checkbox_intruder_selfie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:button="@drawable/bg_checkbox_lock"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Switch
            android:id="@+id/switch_show_hide_pattern"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/hide_pattern"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/hide_pattern"
            android:textColor="#2c2c2c"
            android:textSize="14sp"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/checkbox_show_hide_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:button="@drawable/bg_checkbox_lock"
            android:visibility="visible" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="gone">

        <Switch
            android:id="@+id/switch_vibrate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/vibrate"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/vibrate"
            android:textColor="#2c2c2c"
            android:textSize="14sp"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/checkbox_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:button="@drawable/bg_checkbox_lock"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE" />
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/lock_when"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/lock_settings"
            android:textColor="#2c2c2c"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/lock_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            tool:text="After locking the screen" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE"
            android:textColor="#2c2c2c"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_change_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_clicked"
            android:drawableRight="@drawable/arrow_more"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/change_the_password"
            android:textColor="#2c2c2c"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#DEDEDE"/>

    <TextView
        android:id="@+id/about_me"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:drawableRight="@drawable/arrow_more"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/about_me"
        android:textColor="#2c2c2c"
        android:textSize="14sp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/line_color"
        android:visibility="gone" />
</LinearLayout>